fixing alignmet

--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -120,6 +120,7 @@
         flex-direction: column;
         align-items: center;
         text-align: center;
+        font-size: 20px;
      }
 
      .title{
@@ -127,6 +128,7 @@
         justify-content: center; */
         text-align: center;
         margin-top: 20px;
+        font-size: 55px;
      }
 
 }
